force-app/main/default/objects/Proper_Object_Mapping__c/Proper_Object_Mapping__c.object-meta.xml
<CustomObject>
    <label>Proper Object Mapping</label>
    <nameField>
        <displayFormat>POM-{00000000}</displayFormat>
        <label>Proper Object Mapping Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proper Object Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>