force-app/main/default/objects/Proper_Object_Mapping__c/fields/Destination_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field_Name__c</fullName>
    <label>Destination Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>