force-app/main/default/objects/Proper_Object_Mapping__c/fields/Destination_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field_Type__c</fullName>
    <label>Destination Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_Types</valueSetName>
    </valueSet>
</CustomField>