force-app/main/default/objects/Proper_Object_Mapping__c/fields/Master_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Name__c</fullName>
    <label>Master Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>