force-app/main/default/objects/Proper_Object_Mapping__c/fields/Master_Reference_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Reference_Field_Name__c</fullName>
    <label>Master Reference Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>