force-app/main/default/objects/Proper_Object_Mapping__c/fields/Referred_Master_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Referred_Master_Object_Name__c</fullName>
    <label>Referred Master Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>